--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 		<div class="pull-left col-md-6 col-xs-6">
 			<div class="g-plusone" data-size="medium" data-annotation="inline" data-width="300" data-href="{{ site.url }}"></div>
 		</div>
-		<div class="logo logo-footer logo-gray pull-right"></div>
+		<div class="logo pull-right"></div>
 	</div>
 	<div class="row">
 		{% for block in site.footerBlocks %}
@@ -38,7 +38,7 @@
 		<!-- Please don't delete this line-->
 		<div class="col-md-6">
 			<p class="copyright">
-				&copy; 2014 Based on <a href="https://github.com/gdg-x/zeppelin" target="_blank">Project Zeppelin</a>. Designed and created by <a href="https://plus.google.com/+OlehZasadnyy/about" target="_blank">Oleh Zasadnyy</a> &middot; <a href="http://lviv.gdg.org.ua" target="_blank">GDG Lviv</a>
+				&copy; 2019 Riverside Postdoctoral Association Symposium. All rights reserved.
 			</p>
 		</div>
 	</div>
