--- a/_sass/partials/_base.scss
+++ b/_sass/partials/_base.scss
@@ -35,6 +35,7 @@ $base-section-background-color: $link-color;
 $primary-color: #4285f4;
 $primary-color-hover: #3266d5;
 $icon-fill-color: #8b8b8b;
+$title-color: #db1a1a;
 
 // Sizes
 $min-section-height: 350px;
