--- a/_sass/partials/_hero.scss
+++ b/_sass/partials/_hero.scss
@@ -1,3 +1,5 @@
+$title: #e3e3e3;
+
 .top-section-hero {
     width: 100%;
     height: 100%;
@@ -16,6 +18,10 @@
             font-size: $base-font-size * 2;
             font-weight: $light;
             margin-bottom: 15px;
+        }
+        h1 {
+        color: $title;
+        font-weight: $regular;
         }
         .btn {
             margin: 0 3px;
