--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,7 @@
 		<!-- Please don't delete this line-->
 		<div class="col-md-6">
 			<p class="copyright">
-				&copy; 2019 Riverside Postdoctoral Association Symposium. All rights reserved.
+				&copy; 2019 Riverside Postdoctoral Association. All rights reserved.
 			</p>
 		</div>
 	</div>
