--- a/_includes/location-map.html
+++ b/_includes/location-map.html
@@ -1,29 +1,10 @@
 <!-- Begin Location Section -->
-<section id="location-map" class="location-map">
-    <div id="canvas-map" class="canvas-map"></div>
+<section id="location-map" class="location-map image-section parallax" style="background-image: url({{ site.baseurl }}/img/sections-background/{{ site.mapsbackground }});">
+
     <div class="content-wrapper">
-        <div class="col-lg-3 col-md-4 col-sm-6 col-md-offset-1 animated hiding location-description text-left" data-animation="fadeInLeft" data-delay="0">
-            <div class="row">
-                <div class="pull-left">
-                    <h3>{{ site.locationBlockTitle }}</h3>
-                    <ul>
-                        {% if site.eventLocationName %}<li>{{ site.eventLocationName }}</li>{% endif %}
-                        <li>{{ site.eventStreetAddress }}, {{ site.eventAddressLocality }}</li>
-                        <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-                        <li>
-                            {% assign startTime = site.eventStartTime | split: "T" %}
-                            <time>{{ startTime[1] }}</time> -
-                            {% assign endTime = site.eventEndTime | split: "T" %}
-                            <time>{{ endTime[1] }}</time>
-                        </li>
-                    </ul>
-                </div>
-                <a href="{{ site.baseurl | append: '/logistics/#find-way' }}" class="pull-right">
-                    <svg class="icon icon-direction" viewBox="0 0 32 32">
-                        <use xlink:href="{{ site.baseurl }}/img/sprites/sprites.svg#icon-direction"></use>
-                    </svg>
-                </a>
-            </div>
+        <div class="col-lg-10 col-lg-offset-1">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3308.7082881836213!2d-117.33101528444466!3d33.974336580627146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcae12790a4881%3A0xfac5ba60bc0ded17!2sHighlander%20Union%20Building!5e0!3m2!1sen!2sus!4v1571021024367!5m2!1sen!2sus" width="1200" height="800" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+
         </div>
     </div>
 </section>
