--- a/_includes/speakers-list.html
+++ b/_includes/speakers-list.html
@@ -6,7 +6,7 @@
                 {% for speaker in site.data.speakers %}
                 <div class="effect-wrapper appear-animation col-md-4 col-sm-6 col-xs-12">
                     <div class="lily-effect ribbon-activator">
-                        <div class="lily-head" data-toggle="modal" data-target="#speakerDetail-{{ speaker.id }}">
+                        <div class="lily-head" data-toggle="modal" data-target="#speakerDetail-{{ speaker.id }}" style="height:370px">
                             <figure class="waves-effect waves-block waves-light" style="background-image: url({{ site.baseurl | append: '/img/people/' | append: speaker.thumbnailUrl }})">
                                 <div class="overlay solid-overlay"></div>
                                 {% if speaker.ribbon != null %}
@@ -49,9 +49,6 @@
                     </div>
                 </div>
                 {% endfor %}
-            </div> 
-            <a href="{{ site.c4pUrl }}" class="btn btn-primary waves-effect waves-button waves-light waves-float" target="_blank">Become a speaker</a>     
-        </div>
     </div>
 </section>
 <!-- End Speakers List -->
