--- a/_includes/speakers-list.html
+++ b/_includes/speakers-list.html
@@ -20,31 +20,20 @@
                                 </ul>
                                 {% endif %}
                                 {% if site.showSessions %}
-                                <figcaption>
-                                    <h2 class="name">{{ speaker.name }} <span>{{ speaker.surname }}</span></h2>
+<!--                                <figcaption>
+                                <h2 class="name"><font color=#5141b5><b>{{ speaker.name }}</b></font> <span><font color=#5141b5><b>{{ speaker.surname }}</b></font></span></h2>
                                     <p class="position">{{ speaker.company }}</p>
-                                </figcaption>
+                                </figcaption> -->
                                 {% endif %}
                             </figure>
                         </div>
                         <div class="lily-bottom">
                             <ul class="slider">
-                                {% assign sessionsNumber = 0 %}
-                                {% if site.showSessions %} 
-                                    {% for session in site.data.sessions %} 
-                                        {% for session_speaker in session.speakers %} 
-                                            {% if session_speaker == speaker.id %}
-                                            {% assign sessionsNumber = sessionsNumber | plus: 1 %}
-                                                <li class="title slider-item animated fadeInRight hidden">{{ session.title }}</li>
-                                            {% endif %} 
-                                        {% endfor %} 
-                                    {% endfor %} 
-                                {% else %}
-                                    <h2 class="name">{{ speaker.name }} <span>{{ speaker.surname }}</span></h2>
-                                    <p class="position">{{ speaker.company }}</p>
-                                {% endif %}
-                            </ul>
-                            <a href="#" class="slider-next-item {% if sessionsNumber < 2 %}hidden{% endif %}">Next</a>
+                            <p class="name"><font color=#5141b5><b>{{ speaker.name }}</b></font> <span><font color=#5141b5><b>{{ speaker.surname }}</b></font></span></p>
+                                     <class="position"><font color=#5141b5><b>{{ speaker.company }}</b></font>
+                               
+ <!--                           </ul>
+                            <a href="#" class="slider-next-item {% if sessionsNumber < 2 %}hidden{% endif %}">Next</a> -->
                         </div>
                     </div>
                 </div>
