--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -16,19 +16,8 @@
             </ul>
             {% endfor %}
             <h3>{{ site.partnersTitle }}</h3>
-            {% for partner in site.data.partners %}
-            <h5>{{ partner.group }}</h5>
-            <ul class="list-inline">
-                {% for element in partner.elements %}
-                <li {% if element.width != null %}style="width: {{ element.width }};"{% endif %}>
-                    <a href="{{ element.link }}" target="_blank">
-                        <img src="{{ site.baseurl }}/img/partners/{{ element.imageUrl }}" title="{{ element.description }}" alt="{{ element.name }}">
-                    </a>
-                </li>
-                {% endfor %}
-            </ul>
-            {% endfor %}
-            <a href="{{ site.c4sponsorsUrl }}" class="btn btn-primary waves-effect waves-button waves-light waves-float">{{ site.partnersC4sponsorsButton }}</a>
+
+            <a href="https://rpa.ucr.edu/symposium2019/partners/" class="btn btn-primary waves-effect waves-button waves-light waves-float" target="_blank">See all our Partners!</a>
         </div>
     </div> 
 </section>
