--- a/_includes/team.html
+++ b/_includes/team.html
@@ -4,16 +4,22 @@
         <div class="col-lg-10 col-lg-offset-1">
             <h3>{{ site.teamBlockTitle }}</h3>
             <p class="text-left animated hiding" data-animation="fadeInUp" data-delay="0">{{ site.aboutUs }}</p>
+            <p ></p>
         </div>
+        <div class="clearfix"></div>
+        <div class="btn btn-primary waves-effect waves-button waves-light waves-float">
+            <a href="https://rpa.ucr.edu/" target="_blank">Contact us!</a>
+        </div>
+        <div class="clearfix"></div>
         <div class="col-lg-10 col-lg-offset-1 text-center">
-            <h4 class="text-left animated hiding appear-animation-trigger" data-animation="fadeInUp" data-delay="0">Organizers</h4>
+            <h4 class="text-left animated hiding appear-animation-trigger" data-animation="fadeInUp" data-delay="0">RPA Team</h4>
             {% for teamMember in site.data.team %} {% if teamMember.team != null %}
             <div class="effect-wrapper col-md-4 col-sm-6 col-xs-12 cols-centered appear-animation">
-                <div class="zoe-effect" data-toggle="modal" data-target="#speakerDetail-{{ teamMember.id }}">
+                <div class="zoe-effect" data-toggle="modal" data-target="#speakerDetail-{{ teamMember.id }}" style="height:370px">
                     <figure class="waves-effect waves-block waves-light" style="background-image: url({{ site.baseurl | append: '/img/people/' | append: teamMember.thumbnailUrl }})">
-                        <div class="overlay solid-overlay"></div>
+                        
                         <figcaption>
-                            <div class="col-md-8 col-xs-8 text-left">
+                            <div class="col-md-10 col-xs-10 text-left">
                                 <h2 class="name">{{ teamMember.name }} <span>{{ teamMember.surname }}</span></h2>
                                 <div class="clearfix"></div>
                                 <span class="position">{{ teamMember.title }}</span>
@@ -30,8 +36,11 @@
                 </div>
             </div>
             {% endif %} {% endfor %}
-        </div>
-        <div class="col-lg-10 col-lg-offset-1 text-center">
+            <div class="clearfix"></div>
+            <div class="clearfix"></div>
+         </div>
+         
+ <!--        <div class="col-lg-10 col-lg-offset-1 text-center">
             <h4 class="text-left animated hiding appear-animation-trigger" data-animation="fadeInUp" data-delay="0">Program committee</h4>
             {% for teamMember in site.data.team %} {% if teamMember.subTeam != null %}
             <div class="effect-wrapper col-md-4 col-sm-6 col-xs-12 cols-centered appear-animation">
@@ -56,7 +65,8 @@
                 </div>
             </div>
             {% endif %} {% endfor %}
-        </div>
+        </div> -->
+        
     </div>
 </section>
 <!-- End Team List -->
