--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -55,16 +55,16 @@
                                                 {% endfor %}    
                                             {% endfor %}
                                         </ul>
-                                    </div>
+                                        {% if session.description != null %}
+                                        <p class="service-description" itemprop="name"> <a href= {{ session.photo }} >{{ session.description }}</a></p>
+                                        {% endif %}  
+                                   </div>
                                 </div>
                                 {% elsif slot == session.id and session.service != null %}
                                 <div class="slot col-md-{{ slotColWidth }} col-xs-12 service-slot flexbox-item-height" data-slot-detail="{{ session.place }}">
                                     <div class="color-line"></div>
                                     <div class="slot-content">
                                         <h5 class="slot-title" itemprop="name">{{ session.title }}</h5>
-                                        {% if session.description != null %}
-                                        <p class="service-description">{{ session.description }}</p>
-                                        {% endif %}
                                     </div>
                                 </div>
                                 {% endif %}
