--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,9 @@
 		<!-- Please don't delete this line-->
 		<div class="col-md-6">
 			<p class="copyright">
-				&copy; 2019 Riverside Postdoctoral Association. All rights reserved.
+				&copy; 2019 <a href="https://rpa.ucr.edu/" target="_blank">Riverside Postdoctoral Association</a> . All rights reserved.</p>
+
+<p class="copyright"> Created by <a href="https://github.com/dcassol/" target="_blank">Daniela Cassol</a> &middot; &middot; All the images designed by <a href="" target="_blank">Marta Pudzianowska</a>.
 			</p>
 		</div>
 	</div>
